--- a/app/globals.css
+++ b/app/globals.css
@@ -1,8 +1,17 @@
 @import "tailwindcss";
 
-.Title {
+.header {
+  position: fixed;
+  top: 0;
+  left:0;
+  width:100%;
+  padding-top: 40px;
+  background-color: white;
+}
+.text {
   color: red;
 }
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
