--- a/app/globals.css
+++ b/app/globals.css
@@ -8,6 +8,12 @@
   padding-top: 40px;
   background-color: white;
 }
+
+.button1 {
+  background-color: red;
+  color: white;
+}
+
 .text {
   color: red;
 }
