--- a/app/globals.css
+++ b/app/globals.css
@@ -6,7 +6,7 @@
   left:0;
   width:100%;
   padding-top: 40px;
-  background-color: white;
+  background-color: #ededed;
 }
 
 .button1 {
@@ -42,7 +42,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #ededed;
     --foreground: #ededed;
   }
 }
